Changelog for mp3asm:
---------------------


0.1.1:
------
Todo:
 - remove dependecy of glib
 - add gnu configure
 - implement callbacks for parsing
 - implement & test vbr
 - implement id3 v1/2
 - link it to mpglib & alsa

0.1.0:
------
	- Parsing commandline should be somewhat ok
	- The cyclic buffer implementation seems to be workling nicely
	- layer 3 streams seem to load.
	- layer 2 too :)
	- writing stream works np
	- 29/03/01: it now can cut frames from a stream 	

0.0.1:
------
Olli Fromme's magnificent idea ended abruptly in october of '97.
More than 3ys before some wanker realised that mp3 files r a sequence of
frames, and that it should be possible to edit at frame level and in the
end stumbled over this lil gem. Although it appeared kinda broken it was
way ahead of its time :) Too bad olli didnt continue development.

So this would be a fair judgement:
 
Almost working, counts on an empty frame to exist in the stream.
Pretty nifty, too bad it was almost forgotten.
Prolly, no not prolly, it just plainly is the most usefull mp3 tool ive
ever seen.