@@ -1,0 +1,7 @@
+# Generated automatically from Makefile.in by configure.
+## Process this file with automake to produce Makefile.in
+
+bin_PROGRAMS = mp3asm
+
+mp3asm_SOURCES = utils.c parse.c frame.c stream.c mp3asm.c
+
