@@ -30,7 +30,6 @@
 #include <stdlib.h>
 #include <string.h>
 #include <sysexits.h>
-#include <glib.h>
 #include <argz.h>
 #include <ctype.h>
 
